--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ border-radius: 0px;
 
 #home-sec {
     padding-top:100px;
-    background: url(../img/1.jpg) no-repeat 50% 50%;
+    background: url(../img/Plan.jpg) no-repeat 50% 50%;
 background-attachment: fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
@@ -308,15 +308,15 @@ border: 1px solid #e1e1e1;
 
 
 
+.txt_soft_shadow{
+    text-shadow: 0px 0px 7px #FFFFFF;
+    color: black;
+}
 
 
-
-
-
-
-
-
-
+.header_soft_shadow{
+    text-shadow: 0px 0px 7px #000000;
+}
 
 
 
