--- a/css/style.css
+++ b/css/style.css
@@ -319,10 +319,40 @@ border: 1px solid #e1e1e1;
 }
 
 
+/*===================================
+    ANIMATION EXTRA
+====================================*/
 
+@keyframes slideIn{
+    0%{
+        transform: translate3d(-45px,0px,0px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate3d(30px,0px,0px);
+        opacity: 1;
+    }
+}
 
+@keyframes slideOut{
+    0%{
+        transform: translate3d(30px,0px,0px);
+        opacity: 1;
+    }
+    100%{
+        transform: translate3d(-45px,0px,0px);
+        opacity: 0;
+    }
+}
 
+.imooji{
+    animation-name: slideOut;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
 
-
-
-
+.imooji:hover{
+    animation-name: slideIn;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
