--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,4 @@
 ﻿
-/*=============================================================
-    Authour URI: www.binarytheme.com
-    License: Commons Attribution 3.0
-
-    http://creativecommons.org/licenses/by/3.0/
-
-    100% To use For Personal And Commercial Use.
-    IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
-   
-    ========================================================  */
-
-
 /*=======================================
     GENERAL STYLES
 ==================================================*/
@@ -162,7 +150,7 @@ border-radius: 0px;
 
 #home-sec {
     padding-top:100px;
-    background: url(../img/Plan.jpg) no-repeat 50% 50%;
+    background: url(../img/Focus.jpg) no-repeat 50% 50%;
 background-attachment: fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
@@ -175,9 +163,11 @@ height: auto;
     color:#fff;
 }
 .head-main {
+    padding-left: 10px;
+    padding-right: 10px;
     font-size:65px ;
     font-weight:100;
-    
+    background-color:rgba(0,0,0,0.5);
 }
 
 
@@ -307,17 +297,21 @@ border: 1px solid #e1e1e1;
 }
 
 
+/*===================================
+    CODE EXTRA
+====================================*/
+.veil{
+    background-color: rgba(0,0,0,0.5);
+}
 
 .txt_soft_shadow{
     text-shadow: 0px 0px 7px #FFFFFF;
     color: black;
 }
 
-
 .header_soft_shadow{
     text-shadow: 0px 0px 7px #000000;
 }
-
 
 /*===================================
     ANIMATION EXTRA
@@ -345,6 +339,27 @@ border: 1px solid #e1e1e1;
     }
 }
 
+@keyframes showVeil{
+    0%{
+        background-color:rgba(0,0,0,0);
+        opacity: 0;
+    }
+    100%{
+        background-color: rgba(0,0,0,0.5);
+        opacity: 1;
+    }
+}
+@keyframes hideVeil{
+    0%{
+        background-color:rgba(0,0,0,0.5);
+        opacity: 1;
+    }
+    100%{
+        background-color: rgba(0,0,0,0);
+        opacity: 0;
+    }
+}
+
 .imooji{
     animation-name: slideOut;
     animation-duration: 2s;
@@ -354,5 +369,17 @@ border: 1px solid #e1e1e1;
 .imooji:hover{
     animation-name: slideIn;
     animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+
+.veilAuto:hover /* Adds black semi transparent veil */{
+    animation-name: showVeil;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+.veilAuto{
+    animation-name: hideVeil;
+    animation-duration: 4s;
     animation-fill-mode: forwards;
 }
