--- a/previews/AngelaDennis/css/bootstrap.css
+++ b/previews/AngelaDennis/css/bootstrap.css
@@ -5071,7 +5071,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #f00;
+  border-color: #337ab7;
 }
 .thumbnail .caption {
   padding: 9px;
