--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,14 @@ border: none;
 font-weight: 900;
 font-size: 30px;
 }
+.plan li.main-functionality {
+padding: 15px 0px;
+background-color: #73B0AE;
+color: #fff;
+border: none;
+font-weight: 900;
+font-size: 30px;
+}
 
 
 /*=======================================
