--- a/previews/AngelaDennis/css/NBLightbox.css
+++ b/previews/AngelaDennis/css/NBLightbox.css
@@ -12,13 +12,12 @@
 }
 .lightboxdisplay{
 	position: fixed;
-	z-index: 999;
-	left: 10%;
-	top:10%;
-	right: 10%;
-	bottom: 10%;
-	width: 80%;
-	height: auto;
-	display: none;
-	box-shadow: 0 0 32px #000;
+   	top: 0%;
+   	left:0%;
+   	max-width: 100%;
+   	width: auto;
+   	height: auto;
+   	max-height: 100%;
+   	display: none;
+   	box-shadow: 0px 0px 64px #000;
 }
