--- a/previews/AngelaDennis/css/NBLightbox.css
+++ b/previews/AngelaDennis/css/NBLightbox.css
@@ -11,13 +11,11 @@
 	background: rgba(0,0,0,0.8);
 }
 .lightboxdisplay{
-	position: fixed;
-   	top: 0%;
-   	left:0%;
+		position: fixed;
    	max-width: 100%;
-   	width: auto;
-   	height: auto;
-   	max-height: 100%;
+		top: 5%;
+   	max-height: 80%;
+		max-width: 95%;
    	display: none;
    	box-shadow: 0px 0px 64px #000;
 }
@@ -25,4 +23,5 @@
 #lbtrigger:hover{
 	opacity: .2;
 	transition: all 1s;
+	cursor: pointer;
 }
