--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ border: 1px solid #e1e1e1;
 
 .txt_soft_shadow{
     text-shadow: 0px 0px 7px #FFFFFF;
-    color: black;
+    color: white;
 }
 
 .header_soft_shadow{
