--- a/previews/XADE002/css/navigation.css
+++ b/previews/XADE002/css/navigation.css
@@ -3,25 +3,26 @@ nav{
 	background:#1D1D1D;
 	color:white;
 	padding: 0;
-	height: 60px;
+	height: 45px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	width: 100%;
+	z-index: 99999;
 }
 .minimenu{
 	margin:0;
 	background:#1D1D1D;
 	color:white;
-	margin-top: 60px;
+	margin-top: 45px;
 	padding: 0;
 	height: 40px;
 	width: 100%;
 }
 nav .right{
 	list-style: none;
-	margin-top: -50px;
+	margin-top: -45px;
 	float: right;
 	padding: 0;
 	display: inline-block;
@@ -41,7 +42,7 @@ nav .right li a:hover{
 }
 nav .left{
 	list-style: none;
-	margin-top: -50px;
+	margin-top: -45px;
 	float: left;
 	padding: 0;
 	display: inline-block;
@@ -85,7 +86,7 @@ nav .branding{
 }
 nav .branding img{
 	background: white;
-	max-height: 60px;
+	max-height: 45px;
 }
 nav .branding img:hover{
 	background: #008753;
