--- a/previews/XADE002/css/styles.css
+++ b/previews/XADE002/css/styles.css
@@ -10,8 +10,27 @@ body{
     box-sizing:border-box;
 }
 .maincontent{
-	margin-top: 30px;
+	margin-top: 20px;
 	margin-left: 10%;
 	margin-right: 10%;
 	width: 80%;
+}
+a{
+	text-decoration: none;
+	color: black;
+}
+a:hover{
+	color:#008753;
+	transition: all .3s;
+}
+
+footer{
+	position: relative;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: #1D1D1D;
+	color: white;
+	padding: 15px;
+	text-align: center;
 }
