--- a/previews/XADE002/css/widget.css
+++ b/previews/XADE002/css/widget.css
@@ -22,3 +22,25 @@
 	padding: 8px;
 	margin-bottom: 25px;
 }
+.hero img{
+	max-width: 100%;
+	border: 2px solid #1D1D1D;
+}
+.hero h1{
+	position: absolute;
+	bottom:15px;
+	padding: 15px;
+	background: #1D1D1D;
+	color:white;
+	padding-right: 20px;
+}
+.hero{
+	position: relative;
+}
+
+@media screen and (max-width: 490px){
+	.hero h1{
+		background: rgba(0,0,0,0.5) !important;
+		font-size: 20px;
+	}
+}
