--- a/previews/XADE002/css/widget.css
+++ b/previews/XADE002/css/widget.css
@@ -22,6 +22,10 @@
 	padding: 8px;
 	margin-bottom: 25px;
 }
+.joinbox .btn:hover{
+	cursor: pointer;
+	color: #008753;
+}
 .hero img{
 	max-width: 100%;
 	border: 2px solid #1D1D1D;
