--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,17 @@ nav ul li a:hover{
 
 
 
-
+@media screen and (max-width:480px) {
+  .hero h1{
+    position: absolute;
+    font-size: 28px !important;
+    color: white;
+    top: 55% !important;
+    left: 0;
+    right: 0;
+    transition: all .5s;
+  }
+}
 
 @media screen and (max-width:900px) {
 
