--- a/containers.css
+++ b/containers.css
@@ -14,6 +14,7 @@
 @media screen and (max-width:665px) {
   .col50{
     width: 100% !important;
+    display: block;
     margin-bottom: 15px;
   }
 }
@@ -21,11 +22,9 @@
 .paddleft2{
   padding-left: 2%;
 }
-
 .paddright2{
   padding-right: 2%;
 }
-
 .floatleft{
   float: left;
 }
@@ -34,7 +33,10 @@
 }
 
 .col50{
-  width: 50%;
+  display: inline-block;
+  width: 48%;
+  vertical-align:top;
+  margin-bottom: 15px;
 }
 
 .container img{
@@ -47,8 +49,7 @@
   width: 92%;
   margin-left: 4%;
   margin-right: 4%;
-  margin-top: 4%;
-  margin-bottom: 2%;
+  margin-top: 1%;
   padding: 1%;
   height: inherit;
 }
@@ -58,6 +59,12 @@
   padding: 15px;
   text-align: center;
   border: 1px solid white;
+}
+
+.joinbox:hover{
+  box-shadow: 0px 0px 16px black;
+  background: #1D1D1D;
+  transition: all .8s;
 }
 
 .joinbox a{
@@ -70,7 +77,8 @@
 }
 
 .joinbox a:hover{
-  color: #3aa344
+  color: #3aa344;
+  transition: all .5s;
 }
 
 .ulmaster{
@@ -93,4 +101,11 @@
     margin: 0;
     width: inherit;
     text-align: center;
+}
+
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 0px 0px transparent !important;
 }
