--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body{
   background: rgb(35, 37, 33) !important;
 }
 
+.borderize{
+  border: 1px solid white;
+}
+
 footer{
   width: 100%;
   bottom: 0;
@@ -16,6 +20,7 @@ footer{
   right: 0;
   text-align: center;
   color: white;
+  margin-top: 80px;
   background: #333336;
   padding: 35px;
 }
@@ -112,7 +117,7 @@ nav ul li a:hover{
   position: absolute;
   font-size: 62px;
   color: white;
-  top: 25%;
+  top: 32%;
   left: 0;
   right: 0;
   transition: all .5s;
@@ -124,23 +129,37 @@ nav ul li a:hover{
 }
 
 .superinput{
-  padding: 5px;
+  padding: 10px;
   width: 75%;
   text-align: center;
-  color: white;
-  background: #212121;
-  border: 1px solid white;
+  color: #1D1D1D;
+  font-size: 20px;
+  background: #4e4d4d;
+  border: 0;
+  transition: all .4s;
+}
+
+.superinput:focus{
+  background: #1d1d1d;
+  color: #7e7a7a;
+  transition: all .4s;
 }
 
 #smartbtn{
-  padding: 5px;
-  background: #212121;
-  border: 1px solid white;
-    color: white;
+  margin-left: -4px;
+  padding: 10px;
+  background: #4e4d4d;
+  border: 0;
+  color: #1D1D1D;
+  font-size: 20px;
+  transition: all .4s;
 }
 
 #smartbtn:hover{
+  background: #1d1d1d;
+  color: #7e7a7a;
   cursor: pointer;
+  transition: all .4s;
 }
 
 
@@ -156,7 +175,7 @@ nav ul li a:hover{
     position: absolute;
     font-size: 28px !important;
     color: white;
-    top: 55% !important;
+    top: 50% !important;
     left: 0;
     right: 0;
     transition: all .5s;
