--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,13 @@ nav ul li a:hover{
   transition: all .4s;
 }
 
+.smartwidth{
+  width: 40% !important;
+}
 
+.smartpadd{
+  margin-left: 1px !important;
+}
 
 
 
