--- a/containers.css
+++ b/containers.css
@@ -103,6 +103,14 @@
     text-align: center;
 }
 
+.limaster{
+  padding: 15px;
+  margin: 5px;
+  width: inherit;
+  text-align: center;
+  background: #ad4747;
+}
+
 .center{
   display: block;
   margin-left: auto;
