--- a/dev/Nitro/styles.css
+++ b/dev/Nitro/styles.css
@@ -40,6 +40,14 @@ nav{
 	width:100%;
 }
 
+.tagleft{
+	padding: 10px;
+	vertical-align: middle;
+	text-align: left;
+	float: left;
+}
+
+
 .blockfill{
 	padding: 20px;
 	width: 100%;
