--- a/dev/Nitro/containers.css
+++ b/dev/Nitro/containers.css
@@ -164,3 +164,42 @@
 .sidebar h1{
 	color:#1D1D1D;	
 }
+
+.sidebar ul li{
+	margin-left: 30px
+}
+
+.depreciated{
+	opacity: 0.5;
+	transition: opacity .4s;
+}
+
+.depreciated h1:before{
+	color:#cc3333;
+	content: 'Depreciated:// ';
+}
+
+.depreciated:hover{
+	opacity: 1;
+	transition: opacity .4s;
+}
+
+table tr th{
+	background: #1D1D1D;
+	color:#1FBFBF;
+}
+
+table tr td{
+	text-align: left;
+	padding:2px;
+	background: white;
+}
+
+table{
+	background:#1D1D1D;
+	border-radius: 3px
+}
+
+table tr td:first-child{
+	text-align: center;
+}
