--- a/previews/FaithValleyGroup/Lib/owl-carousel/owl.carousel.css
+++ b/previews/FaithValleyGroup/Lib/owl-carousel/owl.carousel.css
@@ -39,6 +39,7 @@
 	
 .owl-carousel .owl-item{
 	float: left;
+    vertical-align: middle;
 }
 .owl-controls .owl-page,
 .owl-controls .owl-buttons div{
