--- a/dev/Nitro/styles.css
+++ b/dev/Nitro/styles.css
@@ -216,7 +216,20 @@ pre code{
 
 .max .content-left .floatX{
     left: -50% !important;
+    opacity: 0;
     position: fixed;
+}
+
+.content-left .floatX{
+    max-height: 50%;
+    overflow: auto;
+    height: auto;
+    position: fixed;
+    z-index: 2;
+    width: 18%;
+    margin:-6px;
+    opacity: 1;
+    left: 1.2%;
 }
 
 .max .content-right{
@@ -301,16 +314,6 @@ pre code{
     cursor: pointer;
     color: #CC3333;
     background: #3D3d3D;
-}
-
-.floatX{
-    max-height: 50%;
-    overflow: auto;
-    height: auto;
-    position: fixed;
-    z-index: 2;
-    width: 18%;
-    margin:-6px;
 }
 
 .floatX::-webkit-scrollbar {
