--- a/dev/Nitro-System/dsys.css
+++ b/dev/Nitro-System/dsys.css
@@ -118,3 +118,43 @@ h1, h2, h3, h4, h5, h6{
   background-color: #5193B2;
   border-radius: 4px;
 }
+
+nav{
+    text-align: center;
+    vertical-align: middle;
+    top: 0;left: 0;right: 0;
+    position: fixed;
+    width: 100%;
+    height: 28px;
+}
+
+.nav-spacer{
+    height: 28px;
+}
+
+nav .title{
+    color:white;
+    text-align: center;
+    margin-top: 0px;
+}
+
+nav .ctrl-close{
+    color:white;
+    position: fixed;
+    right: 0;
+    top: 0;
+    margin-top: 2px; margin-left: 3px; margin-right: 3px;
+}
+
+nav .ctrl-close:hover{
+    color:dodgerblue;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
