--- a/byteSearch/style.css
+++ b/byteSearch/style.css
@@ -9,7 +9,6 @@
 body{
     background: #2d2d2d;
     color:white;
-    /*display: table*/
 }
 
 nav{
@@ -34,7 +33,7 @@ nav h1{
     margin-right: 8px;
 }
 
-nav input{
+nav input, .smitebar{
     display: inline-block;
     vertical-align: top;
     background: #ddd;
@@ -197,4 +196,30 @@ footer{
 .stayPanel img{
     max-width: 100%;
     height: auto;
+}
+
+.plane{
+   position: absolute;
+   top: 0;left: 0;right: 0;bottom: 0;
+   width: 100%;height:100%;
+   z-index: 999999;
+   background: #3D3D3D;
+    text-align: center;
+    padding-top: 20%;
+}
+
+.plane h1{
+    font-size: 70px;
+    text-shadow: 0px 0px 6px white;
+}
+
+.plane h1:hover{
+    font-size: 64px;
+    margin-bottom: 3px;
+    text-shadow: 0px 0px 8px white;
+    cursor: pointer
+}
+
+.plane *{
+    text-align: center;
 }
