--- a/byteSearch/style.css
+++ b/byteSearch/style.css
@@ -173,7 +173,7 @@ footer{
     cursor: pointer;
 }
 
-.stay{
+/*.stay{
     position: fixed;
     top:100px;
     right:4%;
@@ -182,6 +182,22 @@ footer{
     z-index: 9999;
     opacity: 0;
     pointer-events:none;
+}*/
+
+.stay{
+    position: fixed;
+    top:100px;
+    right:4.1%;
+    height: 100%;
+    z-index: 9999;
+    width:30%;
+    opacity: 0;
+    pointer-events:none;
+    background: #2d2d2d;
+}
+
+.stay img{
+    width: 100%;
 }
 
 .stayPanel{
