--- a/dev/Nitro/smite migrated/views/studio.html
+++ b/dev/Nitro/smite migrated/views/studio.html
@@ -11,7 +11,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div class="sidebar">
+	<section>
+        <div class="sidebar">
 		
 	</div>
 	<div class="content">
@@ -32,6 +33,7 @@
 		<pre id="editor"></pre>
 		
 	</div>
+    </section>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.1/ace.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ext-language_tools.js" charset="utf-8"></script>
