--- a/containers.css
+++ b/containers.css
@@ -39,7 +39,7 @@
   margin-bottom: 15px;
 }
 
-.container img{
+.container img:not(.ign){
   margin-top: 50px;
   max-width: 100%;
   box-shadow: 0px 0px 12px black;
@@ -116,4 +116,8 @@
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 0px 0px transparent !important;
+}
+
+.centre{
+    text-align: center;
 }
