--- a/previews/FaithValleyGroup/Lib/nucleon.css
+++ b/previews/FaithValleyGroup/Lib/nucleon.css
@@ -84,6 +84,12 @@ blockquote p {
     margin: 5%;
     height: auto;
 }
+/*
+.gal{
+	max-width: 20% !important;
+	margin: 2% !important;
+	display: inline-block !important;
+}*/
 
 @media (max-width: 600px) {
 	.splitBox33, .splitBox40, .splitBox60, .splitBox50, .splitBox66{
@@ -93,4 +99,26 @@ blockquote p {
 	    max-width: 100%;
 	    margin: 5% 0%;
 	}
+}
+
+.center{
+  text-align: center;
+  align-content: center;
+}
+
+.gal{
+    display: inline-block;
+    border: 1px white solid;
+    border-radius: 3px;
+    vertical-align: middle;
+    opacity: .8;
+    max-width: 20% !important;
+    margin:2% !important;
+}
+
+.gal:hover{
+    cursor: pointer;
+    opacity: 1;
+    border: 0;
+    box-shadow: 0px 0px 16px black;
 }
